footer css fix for overflow

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -8,6 +8,7 @@
     flex-direction: column;
     padding-top: 10px;
     font-family: "Trebuchet MS", "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
+    box-sizing: border-box;
   }
   
   .socialMedia svg {
